    * Android notifications
    * Pull-to-refresh
    * List and Player UI changes
    * Tracklists by tags
    * Userlists of track favoriters
    * Better sharing support (via intent/account manager)
    * Fixed cancel uploads
    * Launch upload progress monitor from notifications
    * Added in-app ChangeLog
    - Caching of connections
    - Upraded ACRA to 4.2.3
    - Added bugsense.com bugtracking
    - GA tracking changes, added audio engine tracking
    - Reorganised settings screen
    - Beta deployment service
    - Fix timestamps in incoming/exclusive
    - Added support for beta push notifications (C2DM)
    - Updated app wording

$ 19
  % v 1.3.3
  _ 2011-06-22
  ! Authorization updates and playback fixes
    * added non-expiring OAuth tokens
    * always enable seeking for Android 2.3 and higher
    * fixed track caching path bug
    - fixed memory leak in FollowStatus
    - fixed wrong path in TrackCache
    - reduced memory footprint by deserializing to smaller objects

$ 18
  % v 1.3.2
  _ 2011-06-16
  ! Friend Finder update
    * Friend finder (with <a href="http://www.facebook.com/">Facebook</a> integration)
    - upgraded Google Analytics SDK to 1.2

$ 17
  % v 1.3.1
  _ 2011-06-07
  ! Maintenance update
    * various bug fixes

$ 15
  % v 1.3.0
  _ 2011-06-01
  ! SignUp changes and local Recording storage
    * Native android and <a href="http://www.facebook.com/">Facebook</a> login + signup
    * migrated app to OAuth2
    * new Java SoundCloud API wrapper,
    * Save recordings & upload them later
    * Support for tumblr

$ 14
  % v 1.2.1
  _ 2011-04-17
  ! Maintenance update
    * various bug fixes

$ 12
  % v 1.2.0
  _ 2011-04-10
  ! Commenting system and Recording upgrade
    * Foursquare integration
    * Commenting functionality
    * 3rd party uplaods
    * Support for AAC encoding (2.3.3 only)

$ 10
  % v 1.1.6
  _ 2011-02-03
  ! Streaming upgrade
    * Track caching for Stagefright media users (selected 2.2 and higher devices)