@@ -15,26 +15,56 @@ public class RemoteControlReceiver extends BroadcastReceiver {
     public void onReceive(Context context, Intent intent) {
         if (Intent.ACTION_MEDIA_BUTTON.equals(intent.getAction())) {
             KeyEvent event = (KeyEvent) intent.getParcelableExtra(Intent.EXTRA_KEY_EVENT);
-            if (event != null &&
-                event.getAction() == KeyEvent.ACTION_UP &&
-                event.getKeyCode() == KeyEvent.KEYCODE_HEADSETHOOK) {
-
-                ICloudPlaybackService svc =
-                        (ICloudPlaybackService) peekService(context,
-                                new Intent(context, CloudPlaybackService.class));
+            if (event != null && event.getAction() == KeyEvent.ACTION_UP) {
+                ICloudPlaybackService svc = (ICloudPlaybackService) peekService(context,
+                        new Intent(context, CloudPlaybackService.class));
 
                 if (svc != null) {
                     try {
-                        if (svc.isPlaying()) {
-                            svc.pause();
-                        } else {
-                            svc.play();
+                        switch (event.getKeyCode()) {
+                            case KeyEvent.KEYCODE_MEDIA_PLAY_PAUSE:
+                            case KeyEvent.KEYCODE_HEADSETHOOK:
+                                handleToggle(context, svc);
+                                break;
+                            case KeyEvent.KEYCODE_MEDIA_PREVIOUS:
+                                handlePreviousTrack(context, svc);
+                                break;
+                            case KeyEvent.KEYCODE_MEDIA_NEXT:
+                                handleNextTrack(context, svc);
+                                break;
+                            case KeyEvent.KEYCODE_MEDIA_REWIND:
+                                handleRewind(context, svc);
+                                break;
                         }
-                    } catch (RemoteException e) {
-                        Log.w(TAG, e);
+                    } catch (RemoteException ignored) {
+                        Log.w(TAG, ignored);
                     }
                 }
             }
         }
+    }
+
+    private void handleRewind(Context context, ICloudPlaybackService svc) throws RemoteException {
+        svc.restart();
+    }
+
+    private void handlePause(Context context, ICloudPlaybackService svc) throws RemoteException {
+        svc.pause();
+    }
+
+    private void handleToggle(Context context, ICloudPlaybackService svc) throws RemoteException {
+        if (svc.isPlaying()) {
+            svc.pause();
+        } else {
+            svc.play();
+        }
+    }
+
+    private void handleNextTrack(Context context, ICloudPlaybackService svc) throws RemoteException {
+        svc.next();
+    }
+
+    private void handlePreviousTrack(Context context, ICloudPlaybackService svc) throws RemoteException {
+        svc.prev();
     }
 }
